Fix test run